Add Unit and Integration tests - Add unit and integration tests for redirect flow - Refactor services - Add Exception in order service - Fix open todo's

--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,7 @@
     "name": "cm/payments",
     "description": "CM Payment module for Magento 2",
     "type": "magento2-module",
+    "version": "0.0.1",
     "keywords": [
         "cm",
         "cmpayments"
