--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,7 @@
     },
     "extra": {
         "branch-alias": {
-            "dev-feature/redirect-flow": "0.0.1"
+            "dev-feature/redirect-flow": "0.0.x-dev"
         }
     }
 }
