--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,7 @@
     "name": "cm/payments",
     "description": "CM.com Payment module for Magento 2",
     "type": "magento2-module",
+    "version": "0.1.0",
     "keywords": [
         "cm",
         "cmpayments"
