--- a/phpstan.neon
+++ b/phpstan.neon
@@ -1,5 +1,11 @@
 parameters:
     level: 1
+        reportUnmatchedIgnoredErrors: false
+        ignoreErrors:
+        - '#Variable \$block might not be defined.#'
+        - '#Undefined variable: \$block#'
+        - '#Variable \$escaper might not be defined.#'
+        - '#Undefined variable: \$escaper#'
     fileExtensions:
         - php
         - phtml
