--- a/composer.json
+++ b/composer.json
@@ -5,15 +5,35 @@
     "version": "1.0.0",
     "keywords": [
         "cm",
-        "cmpayments"
+        "cmpayments",
+        "ideal",
+        "creditcard",
+        "directdebit",
+        "bancontact",
+        "elv",
+        "klarna",
+        "v-pay",
+        "maestro",
+        "visa",
+        "refunds",
+        "magento2",
+        "magento 2"
     ],
     "license": [
         "OSL-3.0",
         "AFL-3.0"
     ],
     "require": {
-        "php": ">=7.3",
-        "magento/framework": ">=102.0.0",
+        "php": "~7.3.0||~7.4.0",
+        "magento/framework": "^102|^103",
+        "magento/module-backend": "^101.0|^102.0",
+        "magento/module-config": "^101.0",
+        "magento/module-checkout": "^100.2",
+        "magento/module-customer": "^102.0|^103.0",
+        "magento/module-directory": "^100.2",
+        "magento/module-payment": "^100.2",
+        "magento/module-quote": "^101.0",
+        "magento/module-sales": "^102.0||^103.0",
         "cmpayments/guzzle-psp-authentication-middleware": "^1.0",
         "guzzlehttp/guzzle": "^6.3 || ^7.0"
     },
