--- a/.github/workflows/integration-test.yml
+++ b/.github/workflows/integration-test.yml
@@ -16,6 +16,8 @@ jobs:
             MAGENTO_VERSION: 2.3.7
           - PHP_VERSION: php74-fpm
             MAGENTO_VERSION: 2.4.2-p1
+          - PHP_VERSION: php74-fpm
+            MAGENTO_VERSION: 2.4.3-p1
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v1
