--- a/.github/workflows/phpstan.yml
+++ b/.github/workflows/phpstan.yml
@@ -34,7 +34,7 @@ jobs:
 
       # Install the extension and PHPStan into Magento
       - name: Install the extensions in Magento
-        run: docker exec magento-project-community-edition composer require cmdotcom-plugins/magento2-payments:@dev fooman/phpstan-magento2-magic-methods:^0.7
+        run: docker exec magento-project-community-edition composer require cmdotcom-plugins/magento2-payments:@dev
 
       - name: Enable the extension
         run: docker exec magento-project-community-edition bash -c "php bin/magento module:enable CM_Payments && php bin/magento setup:upgrade && php bin/magento setup:di:compile"
