--- a/.github/workflows/integration-test.yml
+++ b/.github/workflows/integration-test.yml
@@ -18,8 +18,6 @@ jobs:
             MAGENTO_VERSION: 2.4.3-p1
           - PHP_VERSION: php81-fpm
             MAGENTO_VERSION: 2.4.5-p1
-          - PHP_VERSION: php82-fpm
-            MAGENTO_VERSION: 2.4.6-p1
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v1
@@ -38,10 +36,17 @@ jobs:
       - name: Upload our code into the docker container
         run: docker cp $(pwd) magento-project-community-edition:/data/extensions/
 
+      # Debug stuff
+      - name: Debug
+        run: docker exec magento-project-community-edition cat composer.json
+
+      # Debug stuff 2
+      - name: Debug2
+        run: docker exec magento-project-community-edition ls && cd extensions && ls && cd ..
+
       # Replace <VENDOR> and <MODULE> with the name in your `composer.json`.
       - name: Install the extension in Magento
-        run: docker exec magento-project-community-edition composer require cmdotcom-plugins/magento2-payments:dev-integration-test-branch
-
+        run: docker exec magento-project-community-edition composer require cmdotcom-plugins/magento2-payments:@dev
       # This step is optional but good to include in your pipeline.
       - name: Run setup:di:compile
         run: docker exec magento-project-community-edition php bin/magento setup:di:compile
