--- a/.github/workflows/unit-test.yml
+++ b/.github/workflows/unit-test.yml
@@ -18,8 +18,6 @@ jobs:
             MAGENTO_VERSION: 2.4.3-p1
           - PHP_VERSION: php81-fpm
             MAGENTO_VERSION: 2.4.5-p1
-          - PHP_VERSION: php82-fpm
-            MAGENTO_VERSION: 2.4.6-p1
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v1
@@ -40,7 +38,7 @@ jobs:
 
       # Replace <VENDOR> and <MODULE> with the name in your `composer.json`.
       - name: Install the extension in Magento
-        run: docker exec magento-project-community-edition composer require cmdotcom-plugins/magento2-payments:dev-unit-test-branch
+        run: docker exec magento-project-community-edition composer require cmdotcom-plugins/magento2-payments:@dev
 
       # Only the tests in your repository will be run, the default Magento tests are not included in this.
       - name: Run tests
