--- a/.github/workflows/integration-test.yml
+++ b/.github/workflows/integration-test.yml
@@ -39,9 +39,10 @@ jobs:
       # Replace <VENDOR> and <MODULE> with the name in your `composer.json`.
       - name: Install the extension in Magento
         run: docker exec magento-project-community-edition composer require cmdotcom-plugins/magento2-payments:@dev
-      # This step is optional but good to include in your pipeline.
-      - name: Run setup:di:compile
-        run: docker exec magento-project-community-edition php bin/magento setup:di:compile
+
+#      # This step is optional but good to include in your pipeline.
+#      - name: Run setup:di:compile
+#        run: docker exec magento-project-community-edition php bin/magento setup:di:compile
 
       # I'm not sure why, but this step is required. You might end up with loads and loads of failed tests.
       - name: Enable developer mode
