--- a/.github/workflows/integration-test.yml
+++ b/.github/workflows/integration-test.yml
@@ -40,9 +40,15 @@ jobs:
       - name: Install the extension in Magento
         run: docker exec magento-project-community-edition composer require cmdotcom-plugins/magento2-payments:@dev
 
-#      # This step is optional but good to include in your pipeline.
-#      - name: Run setup:di:compile
-#        run: docker exec magento-project-community-edition php bin/magento setup:di:compile
+      - name: Fix permissions for files
+        run: docker exec magento-project-community-edition sh -c 'find var generated vendor pub/static pub/media app/etc -type f -exec chmod u+w {} +'
+
+      - name: Fix permissions for directories
+        run: docker exec magento-project-community-edition sh -c 'find var generated vendor pub/static pub/media app/etc -type d -exec chmod u+w {} +'
+
+      # This step is optional but good to include in your pipeline.
+      - name: Run setup:di:compile
+        run: docker exec magento-project-community-edition php bin/magento setup:di:compile
 
       # I'm not sure why, but this step is required. You might end up with loads and loads of failed tests.
       - name: Enable developer mode
