--- a/.github/workflows/phpstan.yml
+++ b/.github/workflows/phpstan.yml
@@ -12,10 +12,10 @@ jobs:
       # Magento 2.2.11 supports PHP up to version 7.1, so PHP 7.2 is disabled for this version.
       matrix:
         include:
-#          - PHP_VERSION: php73-fpm
-#            MAGENTO_VERSION: 2.3.6
-#          - PHP_VERSION: php74-fpm
-#            MAGENTO_VERSION: 2.4.3-p1
+          - PHP_VERSION: php73-fpm
+            MAGENTO_VERSION: 2.3.6
+          - PHP_VERSION: php74-fpm
+            MAGENTO_VERSION: 2.4.3-p1
           - PHP_VERSION: php81-fpm
             MAGENTO_VERSION: 2.4.5-p1
     runs-on: ubuntu-latest
