--- a/.github/workflows/phpstan.yml
+++ b/.github/workflows/phpstan.yml
@@ -7,6 +7,8 @@ on: push
 jobs:
   build:
     strategy:
+      fail-fast: false
+      max-parallel: 2
       # This Matrix will run the tests on PHP 7.0, 7.1 and 7.2 and on Magento 2.2.11 and 2.3.5-p1.
       # Magento 2.3.5-p1 requires PHP 7.1 and higher, so PHP 7.0 is disabled for this version.
       # Magento 2.2.11 supports PHP up to version 7.1, so PHP 7.2 is disabled for this version.
