--- a/.github/workflows/integration-test.yml
+++ b/.github/workflows/integration-test.yml
@@ -8,7 +8,7 @@ jobs:
   build:
     strategy:
       fail-fast: false
-      max-parallel: 2
+      max-parallel: 5
       # This Matrix will run the tests on PHP 7.0, 7.1 and 7.2 and on Magento 2.2.11 and 2.3.5-p1.
       # Magento 2.3.5-p1 requires PHP 7.1 and higher, so PHP 7.0 is disabled for this version.
       # Magento 2.2.11 supports PHP up to version 7.1, so PHP 7.2 is disabled for this version.
@@ -20,6 +20,8 @@ jobs:
             MAGENTO_VERSION: 2.4.3-p1
           - PHP_VERSION: php81-fpm
             MAGENTO_VERSION: 2.4.5-p1
+          - PHP_VERSION: php82-fpm
+            MAGENTO_VERSION: 2.4.7-p1
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v1
