--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,7 @@
         "AFL-3.0"
     ],
     "require": {
-        "php": "~7.3.0||~7.4.0||~8.1.0||~8.2.0",
+        "php": "~7.2.0||~7.3.0||~7.4.0||~8.1.0||~8.2.0",
         "magento/framework": "^102|^103",
         "magento/module-backend": "^101.0|^102.0",
         "magento/module-config": "^101.0",
