--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "name": "cmdotcom-plugins/magento2-payments",
     "description": "CM Payment module for Magento 2",
     "type": "magento2-module",
-    "version": "1.4.2",
+    "version": "1.4.3",
     "keywords": [
         "cm",
         "cmpayments",
@@ -24,7 +24,7 @@
         "AFL-3.0"
     ],
     "require": {
-        "php": "~7.2.0||~7.3.0||~7.4.0||~8.1.0||~8.2.0||~8.3.0",
+        "php": "~7.2.0||~7.3.0||~7.4.0||~8.1.0||~8.2.0||~8.3.0||~8.4.0",
         "magento/framework": "^102|^103",
         "magento/module-backend": "^101.0|^102.0",
         "magento/module-config": "^101.0",
